Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
None
-
None
-
Patch Available
Description
The following IDL
exception InvalidFoo \{ 1: required string bar }
when used with wcf generates code with an superfluous backing field at the Fault class:
[DataContract] public partial class InvalidFooFault \{ private string _bar; // CS0169 field never used [DataMember(Order = 0)] public string Bar { get; set; } }
Attachments
Issue Links
- links to