THRIFT-4832 superfluous backing field causes CS0169 "field never used" Client: netstd Patch: Jens Geyer